# ord-python

./: .cspell.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  pyproject.toml  python-plugin-handoff.md
.github/workflows/: ci.yml
docs/: milestones.md  vendored-schema.md
examples/fastapi_app/: README.md  emit_ord.py  main.py
scripts/: refresh_spec.py
src/ord/: __init__.py  server.py
src/ord/_spec/: Configuration.schema.json  Document.schema.json
src/ord/adapters/: __init__.py  fastapi.py
src/ord/auth/: __init__.py
src/ord/core/: __init__.py  models.py  validation.py
tests/: test_smoke.py
tests/adapters/: test_fastapi.py  test_server.py
tests/core/: test_models.py  test_validation.py
