[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ord-python"
version = "0.0.1"
description = "Open Resource Discovery (ORD) plugin for FastAPI and FastMCP services."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Muhazerin" }]
keywords = ["ord", "open-resource-discovery", "fastapi", "fastmcp", "sap"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pydantic>=2.11,<3",
  "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
fastmcp = ["fastmcp>=0.1"]
dev = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Muhazerin/ord-python"
Issues = "https://github.com/Muhazerin/ord-python/issues"
Specification = "https://open-resource-discovery.org/"

[tool.hatch.build.targets.wheel]
packages = ["src/ord"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=ord --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["ord"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ord]
# Plugin configuration. See docs/upstream-parity.md for the cap-js/ord mapping.
# Example:
#   ord_id_namespace = "sap.damn"
#   ord_document_path = "/.well-known/open-resource-discovery"
